--- a/Basic/Makefile
+++ b/Basic/Makefile
@@ -1,10 +1,19 @@
 # 	The Make Utility
 #	^^^^^^^^^^^^^^^^
-# 	1) If you run, use make. This program will look for a file named makefile in your directory, and then execute it.
-# 	2) If you have several makefiles, then you can execute them with the command: "make -f Makefile-1"
-#	Note: There are several other switches to the make utility. For more info, man make
+# 	1) To run, type "make". This program will look for a file named Makefile/makefile in your directory, and then execute it.
+# 	2) If you have several makefiles, then you can execute them with the command: "make -f <Makefile name>"
 
 #	The basic Makefile
 #	^^^^^^^^^^^^^^^^^^
 all:
 	g++ main.cpp hello.cpp factorial.cpp -o hello
+	
+#	Description
+#	^^^^^^^^^^^
+#	Basic Structure of makefile:
+#	<Target> : Dependencies
+#		<Tab>	System commands 
+#	Note:	It is intendation based. So <Tab> is essential.
+#
+#	target		: all
+#	System commands : g++ main.cpp hello.cpp factorial.cpp -o hello	
